--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes in 1.7-0
+
+  * mbt.R (new function): Mallows-Bradley-Terry model
+  * tartness (new data set): tartness rankings of salad dressings
+  * boot.R: fix CRAN check warning about partial matching
+  * OptiPt.Rd (references): add Luce (1959)
+  * NAMESPACE: new file
+  * DESCRIPTION (Version, Date): 1.7-0
+
 Changes in 1.6-0
 
   * BUG FIX: use correct design matrix in thurstone.R
